src/styles/dog-tree.module.scss
@use "@styles/_theme.module.scss" as Theme;

div.top {
  display: flex;
  margin: Theme.$spaceBetweenElements 0;
  justify-content: space-between;
  width: 100%;
}
h1.heading {
  margin: calc(Theme.$spaceBetweenElements + Theme.$outlineWidth);
  div.goingHome {
    font-weight: 400;
  }
}
div.bottom {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-bottom: Theme.$spaceBetweenElements;
  img.puppyGroup {
    width: 600px;
    height: auto;
    border-radius: Theme.$bigButtonRadius;
    object-fit: cover;
  }
}
.momHeadshot {
  margin-bottom: calc(Theme.$spaceBetweenElements + Theme.$outlineWidth);
}

.dadHeadshot {
  margin-bottom: calc(Theme.$spaceBetweenElements + Theme.$outlineWidth);
}

@include Theme.mediaQuery(Theme.$tabletViewport) {
  img.puppyGroup {
    width: 100%;
  }
  .dadHeadshot {
    margin-left: calc(Theme.$spaceBetweenElements + Theme.$outlineWidth);
  }
}
@include Theme.mediaQuery(Theme.$LgPhoneViewport) {
  h1.heading {
    margin: 0 0 Theme.$spaceBetweenElements 0;
  }
  div.top {
    flex-direction: column;
    align-items: center;
  }
  img.puppyGroup {
    width: 100% !important;
  }
  .dadHeadshot {
    margin-left: 0;
  }
}

